--- a/formGestore.html
+++ b/formGestore.html
@@ -19,6 +19,12 @@
     </form>
     <hr>
     <hr>
+    <form action ="visualizzaS.php">
+    
+        <input type="submit" value ="visualizza Statistiche ">
+    </form>
+    <hr>
+    <hr>
     Aggiungi un numero di pezzi a un prodotto <br>
     <form action ="addPezzi.php" method = "post">
         Inserisci il modello: <input type="text" name = "modello"><br>
